--- a/Data PreProcessing Notebooks/Preprocessing.ipynb
+++ b/Data PreProcessing Notebooks/Preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "a9d61f4e",
    "metadata": {},
    "outputs": [],
@@ -20,12 +20,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "id": "12d9943e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df=pd.read_csv(r'C:\\Users\\ritul\\OneDrive\\Desktop\\Projects\\DataAnalysis\\social-data-analysis\\Raw Data\\Dataset.csv')"
+    "df=pd.read_csv(r\"C:\\Users\\ritul\\OneDrive\\Desktop\\Projects\\DataAnalysis\\social-data-analysis\\RawData\\DataSet.csv\")"
    ]
   },
   {
